@@ -11,141 +11,72 @@ use Net::DNS::Resolver::Base ();
 @ISA     = qw(Net::DNS::Resolver::Base);
 $VERSION = (qw$LastChangedRevision$)[1];
 
+use Win32::IPHelper;
 use Win32::Registry;
-
+use Data::Dumper;
 sub init {
   
-        my $debug=0;
+        my $debug=1;
 	my ($class) = @_;
 	
 	my $defaults = $class->defaults;
+
+
+	my $FIXED_INFO={};
+
+	my $ret = Win32::IPHelper::GetNetworkParams($FIXED_INFO);
 	
+	if ($ret == 0)
+	  {
+		  print Dumper $FIXED_INFO if $debug;
+	  }
+	else
+	  {
+		  
+		  Carp::croak "GetNetworkParams() error %u: %s\n", $ret, Win32::FormatMessage($ret);
+	  }
+	
+
+	my @nameservers = map { $_->{'IpAddress'} } @{$FIXED_INFO->{'DnsServersList'}};
+	
+
+	if (@nameservers) {
+		# remove blanks and dupes
+		my @a;
+		my %h;
+		foreach my $ns (@nameservers) {
+			push @a, $ns unless (!$ns || $h{$ns});
+			$h{$ns} = 1;
+		}
+		$defaults->{'nameservers'} = [map { m/(.*)/ } @a];
+	}
+
+	my $domain=$FIXED_INFO->{'DomainName'}||'';
+	my $searchlist = "$domain" ;
+	
+
+	#
+	# The Win32::IPHelper  does not return searchlist. Lets do a best effort attempt to get 
+	# a searchlist from the registry.
+
 	my ($resobj, %keys);
 
-	my $root = 'SYSTEM\CurrentControlSet\Services\Tcpip\Parameters';
-
+	my $root = 'SYSTEM\CurrentControlSet\Services\Tcplp\Parameters';
+	my $opened_registry =1;
 	unless ($main::HKEY_LOCAL_MACHINE->Open($root, $resobj)) {
 		# Didn't work, maybe we are on 95/98/Me?
 		$root = 'SYSTEM\CurrentControlSet\Services\VxD\MSTCP';
 		$main::HKEY_LOCAL_MACHINE->Open($root, $resobj)
-			or Carp::croak "can't read registry: $!";
+			or  $opened_registry =0;
 	}
 
-	$resobj->GetValues(\%keys)
-		or Carp::croak "can't read registry values: $!";
-
-	# Best effort to find a useful domain name for the current host
-	# if domain ends up blank, we're probably (?) not connected anywhere
-	# a DNS server is interesting either...
-	my $domain = $keys{'Domain'}->[2] || $keys{'DhcpDomain'}->[2] || '';
 	
-	# If nothing else, the searchlist should probably contain our own domain
-	# also see below for domain name devolution if so configured
-	# (also remove any duplicates later)
-	my $searchlist = "$domain ";
-	$searchlist  .= $keys{'SearchList'}->[2];
+	if ($opened_registry &&  $resobj->GetValues(\%keys)){
+		$searchlist  .= $keys{'SearchList'}->[2];
+	}
 	
-	# This is (probably) adequate on NT4
-	# NameServer overrides DhcpNameServer if both exist
-	my $nt4nameservers = $keys{'NameServer'}->[2] || $keys{'DhcpNameServer'}->[2];
-	my $nameservers = "";
-
-
-
-#
-#
-#  This code is agued to be broken see ticket rt.cpan.org ticket 11931
-#  There seems to be sufficient reason to remove this code
-#
-#  For details see https://rt.cpan.org/Ticket/Display.html?id=11931
-#
-#
-#	#
-#	# but on W2K/XP the registry layout is more advanced due to dynamically
-#	# appearing connections. So we attempt to handle them, too...
-#	# opt to silently fail if something isn't ok (maybe we're on NT4)
-#	# drop any duplicates later, but must ignore NT4 style entries if in 2K/XP
-#	my $dnsadapters;
-#	$resobj->Open("DNSRegisteredAdapters", $dnsadapters);
-#	if ($dnsadapters) {
-#		my @adapters;
-#		$dnsadapters->GetKeys(\@adapters);
-#		foreach my $adapter (@adapters) {
-#			my $regadapter;
-#			$dnsadapters->Open($adapter, $regadapter);
-#			if ($regadapter) {
-#				my($type,$ns);
-#				$regadapter->QueryValueEx("DNSServerAddresses", $type, $ns);
-#				while (length($ns) >= 4) {
-#					my $addr = join('.', unpack("C4", substr($ns,0,4,"")));
-#					$nameservers .= " $addr";
-#				}
-#			}
-#		}
-#	}
-
-
-
-
-  # This code was introduced by Hanno Stock, see ticket 1193 dd May 19 2006
-  # 
-  # it should work on Win2K and XP and looks for the DNS services
-  # using the BIND key
-  # 
-
-  my $bind_linkage;
-  my @sorted_interfaces;
-	print ";; DNS: Getting sorted interface list\n" if $debug;
-  $main::HKEY_LOCAL_MACHINE->Open('SYSTEM\CurrentControlSet\Services\Tcpip\Linkage',
-   $bind_linkage);
-	if($bind_linkage){
-	  my $bind_linkage_list;
-	  my $type;
-	  $bind_linkage->QueryValueEx('Bind', $type, $bind_linkage_list);
-	  if($bind_linkage_list){
-	    @sorted_interfaces = split(m/[^\w{}\\-]+/s, $bind_linkage_list);
-	  }
-	  foreach my $interface (@sorted_interfaces){
-	    $interface =~ s/^\\device\\//i;
-	    print ";; DNS:Interface: $interface\n" if $debug;
-	  }
-	}
-
-
-	my $interfaces;
-	$resobj->Open("Interfaces", $interfaces);
-	if ($interfaces) {
-	  my @ifacelist;
-	  if(@sorted_interfaces){
-	    @ifacelist = @sorted_interfaces;
-	  }else{
-	    $interfaces->GetKeys(\@ifacelist);
-	  }
-	  foreach my $iface (@ifacelist) {
-		my $regiface;
-		$interfaces->Open($iface, $regiface);
-		
-		if ($regiface) {
-		    my $ns;
-		    my $type;
-		    my $ip;
-		    my $ipdhcp;
-		    $regiface->QueryValueEx("IPAddress", $type, $ip);
-		    $regiface->QueryValueEx("DhcpIPAddress", $type, $ipdhcp);
-		    if (($ip && !($ip =~ /0\.0\.0\.0/)) || ($ipdhcp && !($ipdhcp =~ /0\.0
-\.0\.0/))) {
-			# NameServer overrides DhcpNameServer if both exist
-			$regiface->QueryValueEx("NameServer", $type, $ns);
-			$regiface->QueryValueEx("DhcpNameServer", $type, $ns) unless $ns;
-			$nameservers .= " $ns" if $ns;
-		    }
-		}
-	    }
-	}
-	if (!$nameservers) {
-	    $nameservers = $nt4nameservers;
-	}
-
+	
+	
 	if ($domain) {
 		$defaults->{'domain'} = $domain;
 	}
@@ -170,17 +101,6 @@ sub init {
 		$defaults->{'searchlist'} = \@a;
 	}
 
-	if ($nameservers) {
-		# remove blanks and dupes
-		my @a;
-		my %h;
-		foreach my $ns (split(m/[\s,]+/, $nameservers)) {
-			push @a, $ns unless (!$ns || $h{$ns});
-			$h{$ns} = 1;
-		}
-		$defaults->{'nameservers'} = [map { m/(.*)/ } @a];
-	}
-
 	$class->read_env;
 
 	if (!$defaults->{'domain'} && @{$defaults->{'searchlist'}}) {
@@ -188,6 +108,9 @@ sub init {
 	} elsif (!@{$defaults->{'searchlist'}} && $defaults->{'domain'}) {
 		$defaults->{'searchlist'} = [ $defaults->{'domain'} ];
 	}
+
+	print Dumper $defaults if $debug;
+
 }
 
 1;
@@ -214,6 +137,8 @@ for all your resolving needs.
 Copyright (c) 1997-2002 Michael Fuhr. 
 
 Portions Copyright (c) 2002-2004 Chris Reinhardt.
+
+Portions Copyright (c) 2009 Olaf Kolkman, NLnet Labs
 
 All rights reserved.  This program is free software; you may redistribute
 it and/or modify it under the same terms as Perl itself.
